--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
-
+* {
+  box-sizing: border-box;
+}
+span {
+  background-color: aqua;
+  display: inline;
+}
+strong {
+  color: blueviolet;
+}
+div {
+  width: 300px;
+  height: 200px;
+  background-color: blueviolet;
+  padding: 20px;
+  border: 5px solid black;
+  margin: 20px;
+}
